Changes after discussion with Joe. Fixed resp slider mini image pos/sizes and made them group together on zoom in/out. Added Joe's blog changes: comment aligned right, categories styled. Sharpened thumbnails for blog and portfolio, chosen cropping location etc. Clearfix added to blog posts. Color on LOGI changed. JS added to refocus contact form upon user validation errors

--- a/theme/static/css/responsive-slider.css
+++ b/theme/static/css/responsive-slider.css
@@ -22,16 +22,16 @@
 }
 .responsive-slider .slides ul li {
   display: inline-block;
-  max-width: 100%;
+  width: 100%;
 }
 .responsive-slider .slides ul li .slide-body {
   display: inline-block;
   position: relative;
-  max-width: 100%;
+  width: 100%;
   font-size: 14px;
 }
 .responsive-slider .slides ul li .slide-body img {
-  max-width: 100%;
+  width: 100%;
 }
 .responsive-slider .slides ul li .slide-body .caption {
   position: absolute;
@@ -84,21 +84,52 @@
     right: 0;
   }
 }
+
+.responsive-slider .slides ul li .slide-body .caption-img-wrapper {
+    position: absolute;
+    top:0;
+    right:8%;
+    height:100%;
+    width:20%;
+}
+
 .responsive-slider .slides ul li .slide-body .caption.img-html5 {
-  top: 13%;
-  right: 8%;
-  width: 22%;
-}
+    /*top: 50px;
+    right: 30px;*/
+    height:70%;
+    width:100%;
+    right:0;   /*important that if using percents to abs pos, the html5 and css3 posns match, otherwise get drift on zoom*/
+    bottom:20%;
+    text-align: right;
+    padding-right: 10%;
+ }
+
 .responsive-slider .slides ul li .slide-body .caption.img-html5 img {
-  max-width: 100%;
+  /*max-height: 280px;
+  display:block;
+  height:auto;
+  width: auto;*/
+    height: 100%;
+    width: auto;
 }
+
 .responsive-slider .slides ul li .slide-body .caption.img-css3 {
-  top: 57%;
-  right: 12%;
-  width: 7%;
+  /*top: 225px;
+  right: 30px;*/
+    height: 30%;
+    width: 100%;
+    right: 0;
+    bottom: 20%;
+    text-align:right;
 }
+
 .responsive-slider .slides ul li .slide-body .caption.img-css3 img {
-  max-width: 100%;
+  /*max-height: 100px;
+  height:auto;
+  width:auto;
+  display:block;*/
+    height: 100%;
+    width: auto;
 }
 .responsive-slider .slides ul li .slide-body .caption.img-facebook {
   top: 48%;
